# docs/swagger.json
@@ -1,11 +1,25 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        }
     },
     "paths": {
         "/apps/{guid}/features": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This endpoint retrieves the list of features for the specified app.",
                 "produces": [
                     "application/json"
@@ -15,13 +29,6 @@
                 ],
                 "summary": "List app features",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "cf oauth-token",
-                        "name": "cf-Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "App Guid",
@@ -66,6 +73,11 @@
         },
         "/apps/{guid}/features/{name}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -74,13 +86,6 @@
                 ],
                 "summary": "Get an app feature",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "cf oauth-token",
-                        "name": "cf-Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "App Guid",
@@ -128,10 +133,150 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "App Features"
+                ],
+                "summary": "Update an app feature",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "App Guid",
+                        "name": "guid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "App Name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update App Feature",
+                        "name": "UpdateAppFeature",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/app_features.UpdateAppFeature"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app_features.AppFeature"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/config.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/config.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/config.Error"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/config.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/domains": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Domains"
+                ],
+                "summary": "Create a domain",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "false",
+                        "name": "internal",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domains.CreateDomain"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/config.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/config.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/config.Error"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/config.Error"
+                        }
+                    }
+                }
             }
         },
         "/isolation_segments/{guid}/organizations": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieve the organizations entitled to the isolation segment. Return only the organizations the user has access to.",
                 "produces": [
                     "application/json"
@@ -140,15 +285,6 @@
                     "Organizations"
                 ],
                 "summary": "List organizations for isolation segment",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "cf oauth-token",
-                        "name": "cf-Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -185,6 +321,11 @@
         },
         "/organizations": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieve all organizations the user has access to.",
                 "produces": [
                     "application/json"
@@ -193,15 +334,6 @@
                     "Organizations"
                 ],
                 "summary": "List organizations",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "cf oauth-token",
-                        "name": "cf-Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -236,6 +368,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -244,13 +381,6 @@
                 ],
                 "summary": "Create an organization",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "cf oauth-token",
-                        "name": "cf-Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "org name",
                         "name": "name",
@@ -297,6 +427,11 @@
         },
         "/organizations/{guid}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieve all organizations the user has access to.",
                 "produces": [
                     "application/json"
@@ -306,13 +441,6 @@
                 ],
                 "summary": "Get an organization",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "cf oauth-token",
-                        "name": "cf-Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "organization Guid",
@@ -355,6 +483,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -363,13 +496,6 @@
                 ],
                 "summary": "Update an organization",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "cf oauth-token",
-                        "name": "cf-Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "organization Guid",
@@ -480,6 +606,17 @@
                 }
             }
         },
+        "app_features.UpdateAppFeature": {
+            "type": "object",
+            "required": [
+                "enabled"
+            ],
+            "properties": {
+                "enabled": {
+                    "type": "boolean"
+                }
+            }
+        },
         "config.Error": {
             "type": "object",
             "properties": {
@@ -502,6 +639,68 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "domains.CreateDomain": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "internal": {
+                    "type": "boolean"
+                },
+                "metadata": {
+                    "type": "object",
+                    "properties": {
+                        "annotations": {
+                            "type": "object"
+                        },
+                        "labels": {
+                            "type": "object"
+                        }
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "relationships": {
+                    "type": "object",
+                    "properties": {
+                        "organization": {
+                            "type": "object",
+                            "properties": {
+                                "data": {
+                                    "type": "object",
+                                    "properties": {
+                                        "guid": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        },
+                        "shared_organizations": {
+                            "type": "object",
+                            "properties": {
+                                "data": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "guid": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "router_group": {
+                    "type": "object"
                 }
             }
         },
@@ -590,6 +789,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "cf-Authorization",
+            "in": "header"
         }
     }
 }
